# reKolor

./: README.md
.husky/: post-commit  pre-commit
rust/: Cargo.toml
rust/.cargo/: config
rust/src/: console.rs  conv.rs  info.rs  lib.rs  main.rs  utils.rs
typescript/: .eslintignore  .prettierrc.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
typescript/public/: favicon.html  global.css  index.html
typescript/samples/: .gitignore
typescript/src/: .gitignore  App.svelte  CanvasPicture.svelte  CanvasPictureComponent.svelte  ImagePicture.svelte  ImagePlaceholder.svelte  ImagePlaceholderComponent.svelte  PageHeader.svelte  PickingStripe.svelte  PickingStripeList.svelte  constants.ts  main.ts  missed.ts  palette.ts  store.ts  types.ts  utils.ts
typescript/src/palettes/: pantone.json
