[package]
name = "rekolor"
version = "0.1.1"
edition = "2021"
authors = ["Timur Gamerov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
image = "0.24.7"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version= "0.2.63", features = ["serde-serialize"] }
web-sys = { version = "0.3.64", features = ["console"] }
typeshare = "1.0.1"
deltae = "0.3.2"
lab = "0.11.0"
